--- a/Modules/Project/Pranav/Training Site/Bootstrap/Day 9/Assignment/MarginWrap.html
+++ b/Modules/Project/Pranav/Training Site/Bootstrap/Day 9/Assignment/MarginWrap.html
@@ -155,7 +155,7 @@
                     </div>
                 </div>
             </div>
-            <h3 class="text-center mt-5">Colors Demo.</h3>
+            <h3 class="text-center mt-5">Auto Margins & Wrap Demo.</h3>
             <div class="container">
                 <div class="d-flex row-h1">
                     <div class="mr-auto p-2 item-h1">Flex Item</div>
