--- a/Modules/Project/Pranav/Training Site/Bootstrap/Day 9/Assignment/Mediaobj.html
+++ b/Modules/Project/Pranav/Training Site/Bootstrap/Day 9/Assignment/Mediaobj.html
@@ -148,7 +148,7 @@
                     </div>
                 </div>
             </div>
-            <h3 class="text-center mt-5">Media Queries Demo.</h3>
+            <h3 class="text-center mt-5">Media Objects Demo.</h3>
             <div class="media">
                 <img class="d-flex mr-3 ml-3" src="fb.jpg" width="100px" height="100px">
                 <div class="media-body">
@@ -174,6 +174,7 @@
                             Nullam sed leo risus.Ut tellus leo faucibus vitae tortor sed, euismod disnissim ex. Cras non mi vitae enim faucibus 
                             dignissim. Praesent scelerisque condimentum elit, non congue metus lacinia malesuada. Vestibulum purus arcu, molestie in
                             mattis sit amet, aliquet eget est.
+						</div>
                     </div>
                 </div>
             </div>
